feature: Implements inventory and boooking logic